--- a/VisualStudio/UPCMonitor/UPCMonitor/UPCMonitor.csproj
+++ b/VisualStudio/UPCMonitor/UPCMonitor/UPCMonitor.csproj
@@ -36,6 +36,9 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="OpenHardwareMonitorLib">
       <HintPath>C:\Users\Abnormalia\Documents\Visual Studio 2017\Projects\ArduinoMonitor\ArduinoMonitor\OpenHardwareMonitorLib.dll</HintPath>
     </Reference>
@@ -57,6 +60,7 @@
     <None Include="app.manifest">
       <SubType>Designer</SubType>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
